k8s/tw-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tw-frontend
  name: tw-frontend
  namespace: tindahan-wise
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tw-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: tw-frontend
    spec:
      containers:
      - image: tindahan-wise-frontend
        imagePullPolicy: IfNotPresent
        name: tindahan-wise-frontend
        ports:
        - containerPort: 3000
        resources: {}
status: {}
