k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-svc
  namespace: tindahan-wise
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
status:
  loadBalancer: {}
