k8s/svc-transactions-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tw-transactions-service
  name: svc-transactions-service
  namespace: tindahan-wise
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: tw-transactions-service
  type: ClusterIP
status:
  loadBalancer: {}
